# tree-bot

./: .gitignore  CompoundClass.md  ExampleAggregateScript.ts  Makefile  NameCanonization.md  README.md  projectplan.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  classes.yaml  config.yaml  name_canonicalization.yaml  schema.yaml
scripts/: audit_class_mappings.py
src/treebot/: README.md  __init__.py  config.py  main.py  types.py
src/treebot/app/: README.md  container.py  orchestrator.py  run_manager.py
src/treebot/app/steps/: sheet_processing.py
src/treebot/domain/: README.md  errors.py  schema_defs.py
src/treebot/services/: README.md  io_excel.py  transform_service.py  validate_service.py
src/treebot/services/aggregate/: summary.py
src/treebot/services/output/: __init__.py  utils.py  (+2 more)
src/treebot/ui/: app.py  components.py  constants.py  controller.py  logging_bridge.py  run.py  theme.py  types.py  utils.py  views.py
src/treebot/utils/: README.md  logging_setup.py  normalize.py
tests/: README.md
tests/integration/: test_duplicate_headers.py  test_multisheet.py  test_smoke.py
tests/services/aggregate/: test_summary.py
tests/services/io/: test_read_workbook.py  test_schema_detection.py
tests/services/output/: test_output_service.py
tests/services/transform/: test_canonicalization.py  test_transform.py
tests/services/validation/: test_headers.py  test_rules.py
tests/ui/: test_controller.py  test_logging_bridge.py  test_shutdown_cleanup.py
tests/utils/: test_logging_format.py  test_normalize.py  test_typo_safety.py
(+10 files in other folders)
