[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tree-bot-mvp"
version = "0.1.0"
description = "Offline Windows CLI MVP for schema validation and transformation"
authors = ["Tree Bot Team <noreply@example.com>"]
readme = "README.md"
packages = [
  { include = "treebot", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = ">=2.1"
openpyxl = ">=3.1"
pyyaml = ">=6.0"
nicegui = ">=1.4,<3"
rich = ">=13.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
ruff = ">=0.6.0"
mypy = ">=1.7"
types-PyYAML = ">=6.0.12.12"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
files = ["src", "tests", "scripts"]
plugins = []
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
  "pandas.*",
  "numpy.*",
  "openpyxl.*",
  "nicegui.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.poetry.scripts]
treebot-ui = "treebot.ui.run:main"
treebot-cli = "treebot.main:main"
